--- a/style.scss
+++ b/style.scss
@@ -36,6 +36,20 @@ h2{
 button {
     position: absolute;
     bottom: 20%;
+    width: 30px;
+    height: 30px;
+    outline: none;
+    background: none;
+    border: none;
+}
+i {
+    font-size: 30px;
+    width: 20px;
+    cursor: pointer;
+}
+.font-lock {
+    color: #fff;
+    text-shadow: 2px 3px #000;   
 }
 .text-space {
     font-weight: 100;
@@ -48,6 +62,7 @@ button {
     z-index: 3;
     text-shadow: 2px 3px #000;       
     animation: fade-in 2s infinite;
+    cursor: pointer;
 }
 @keyframes fade-in {
     0%,100% {
