--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,22 @@ h2:hover {
 button {
   position: absolute;
   bottom: 20%;
+  width: 30px;
+  height: 30px;
+  outline: none;
+  background: none;
+  border: none;
+}
+
+i {
+  font-size: 30px;
+  width: 20px;
+  cursor: pointer;
+}
+
+.font-lock {
+  color: #fff;
+  text-shadow: 2px 3px #000;
 }
 
 .text-space {
@@ -53,6 +69,7 @@ button {
   z-index: 3;
   text-shadow: 2px 3px #000;
   animation: fade-in 2s infinite;
+  cursor: pointer;
 }
 
 @keyframes fade-in {
