--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,7 @@ body {
   align-items: center;
   padding: 10% 0 0 0;
   width: 100%;
-  height: 100vh;
-  background: red;
+  height: 100%;
 }
 
 h2 {
