--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,7 @@
 
 body {
   width: 100%;
-  min-height: 100vh;
-  height: 100%;
+  height: 100vh;
   display: flex;
 }
 
@@ -19,7 +18,7 @@ body {
   align-items: center;
   padding: 10% 0 0 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 h2 {
