--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
     padding: 10% 0 0 0;
     width: 100%;
     height: 100vh;
@@ -52,9 +53,6 @@ i {
     text-shadow: 2px 3px #000;   
 }
 .text-space {
-    font-weight: 100;
-    color: #fff;
-    font-size: 18px;
     position: absolute;
     left: 50%;
     bottom: 8%;
@@ -63,12 +61,70 @@ i {
     text-shadow: 2px 3px #000;       
     animation: fade-in 2s infinite;
     cursor: pointer;
+    &::before {
+        content: 'Press to Space';
+        font-size: 18px;
+        font-weight: 100;
+        color: #FFF;
+    }
 }
+.text-space::selection {
+    background: none;
+  }
+  .title-wrap {
+    position: relative;
+  }
+  .hover-text {
+    color: #fff;
+    background: #000;
+    border-radius: 5px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    height: 30px;
+    width: 90px;
+    position: absolute;
+    top: -40px;
+    left: -175px;
+  }
 @keyframes fade-in {
     0%,100% {
         opacity: 1;
     }
     50% {
         opacity: .6;
+    }
+}
+@media (max-width:850px) {
+    .hover-text {
+        opacity: 0;
+        overflow: hidden;
+    }
+    body {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+    }
+    .text-space {
+        padding-top: 0;
+        height: 20px;
+        position: fixed;
+        bottom: 3%;
+        &::before {
+            content: 'Press to change';
+            font-size: 18px;
+            font-weight: 100;
+            color: #FFF;
+            position: relative;
+            top: -10px;
+        }
+    }
+    .col {
+        height: 40vh;
+        &:nth-child(5) {
+            grid-column-start: 1;
+            grid-column-end: 3;
+        }
     }
 }
